--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWTService": {
+    "SecretKey": "8O8upGbSqcBJ8mw1C9RiNHPSFWiOdzLl",
+    "Issuer": "UrlServer",
+    "Audience": "UrlClient"
+  }
 }
